--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -1241,7 +1241,7 @@ pre code {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .container {
     max-width: 95%;
   }
@@ -6311,7 +6311,7 @@ td.visible-xs {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .visible-xs.visible-lg {
     display: block !important;
   }
@@ -6376,7 +6376,7 @@ td.visible-sm {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .visible-sm.visible-lg {
     display: block !important;
   }
@@ -6441,7 +6441,7 @@ td.visible-md {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .visible-md.visible-lg {
     display: block !important;
   }
@@ -6506,7 +6506,7 @@ td.visible-lg {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .visible-lg {
     display: block !important;
   }
@@ -6571,7 +6571,7 @@ td.hidden-xs {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .hidden-xs.hidden-lg {
     display: none !important;
   }
@@ -6636,7 +6636,7 @@ td.hidden-sm {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .hidden-sm.hidden-lg {
     display: none !important;
   }
@@ -6701,7 +6701,7 @@ td.hidden-md {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .hidden-md.hidden-lg {
     display: none !important;
   }
@@ -6766,7 +6766,7 @@ td.hidden-lg {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 200px) {
   .hidden-lg {
     display: none !important;
   }
